<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hannahburzynski.weatherapp.MainActivity"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_above="@+id/locationTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp">
        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Temperature"
        android:textColor="#FFFFFFFF"
        android:textSize="150sp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/locationTextView"
        android:layout_alignEnd="@+id/locationTextView" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/CityName"
        android:textColor="#FFFFFFFF"
        android:textSize="36sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidityTextView"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/humidityValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Humidity"
                android:textColor="#FFFFFFFF"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precipitationTextView"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:textSize="24sp" />

            <TextView
                android:text="@string/Pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precipitationValueTextView"
                android:textSize="36sp"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureTextView"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@+id/temperatureTextView"
        android:layout_toRightOf="@+id/temperatureTextView"
        android:contentDescription="@string/degree_symbol"
        app:srcCompat="@drawable/degree" />

    <TextView
        android:text="@string/TimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeTextView"
        android:textSize="24sp"
        android:textColor="#FFFFFFFF"
        android:layout_above="@+id/temperatureTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/latLongTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/lat_long"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_below="@+id/linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/latTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/Latitude"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/latLongTextView"
        android:layout_alignBottom="@+id/latLongTextView"
        android:layout_toRightOf="@+id/latLongTextView"
        android:layout_toEndOf="@+id/latLongTextView" />

    <TextView
        android:id="@+id/longTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latTextVew"
        android:layout_alignBottom="@+id/latTextVew"
        android:layout_alignEnd="@+id/degreeImageView"
        android:layout_alignRight="@+id/degreeImageView"
        android:text="@string/longitude"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:gravity="center_horizontal"
        android:text="@string/DateText"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>
